--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -5,12 +5,8 @@
     flex-flow: column;
     text-align: center;
     justify-content: center;
-    padding: 1rem;
+    padding: 6rem 1rem 1rem 1rem;
   
-    @media only screen and (min-width: 760px) {
-      padding: 6rem 1rem 1rem 1rem;
-    }
-
     h2 {
       margin-bottom: 2rem;
     }
